--- a/soapstore/product/templates/product/home.html
+++ b/soapstore/product/templates/product/home.html
@@ -196,9 +196,9 @@
         <ul class="nav-links">
             <li><a href="categories/">Каталог</a></li>
 <!--            <li><a href="payment.html">Оплата и доставка</a></li>-->
-            <li><a href="https://www.web-leb.com/code">Корзина</a></li>
+            <li><a href="cart/">Корзина</a></li>
             <li><a href="https://www.instagram.com/">Инстаграм</a></li>
-            <li><button class="login-button" href="users/register/">Вход/Регистрация</button></li>
+            <li><a href="register/">Вход/Регистрация</a></li>
         </ul>
     </nav>
     <script>
