--- a/soapstore/product/templates/product/home.html
+++ b/soapstore/product/templates/product/home.html
@@ -194,11 +194,11 @@
             <div class="line3"></div>
         </div>
         <ul class="nav-links">
-            <li><a href="categories/">Каталог</a></li>
+            <li><a href="{% url 'category_list' %}">Каталог</a></li>
 <!--            <li><a href="payment.html">Оплата и доставка</a></li>-->
-            <li><a href="cart/">Корзина</a></li>
+            <li><a href="{% url 'users:cart' %}">Корзина</a></li>
             <li><a href="https://www.instagram.com/">Инстаграм</a></li>
-            <li><a href="register/">Вход/Регистрация</a></li>
+            <li><a href="{% url 'users:register' %}">Вход/Регистрация</a></li>
         </ul>
     </nav>
     <script>
