--- a/soapstore/product/templates/product/product_list.html
+++ b/soapstore/product/templates/product/product_list.html
@@ -1,196 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Каталог</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <style>
-
-     /* *{
-    margin: 0;
-    padding: 0;
-    color: #ffeba7;
-    font-family: sans-serif;
-    letter-spacing: 1px;
-    font-weight: 300;
- } */
- body{
-    overflow-x: hidden;
- }
- nav{
-    height: 4.5rem;
-    width: 100vw;
-    color: #ffeba7;
-    background-color:  #1f2029;
-    box-shadow: 0 3px 20px rgba(0, 0, 0, 0.2);
-    display: flex;
-    position: fixed;
-    z-index: 10;
- }
-
- /*Styling logo*/
- .logo{
-    padding:1vh 1vw;
-    text-align: center;
- }
- .logo img {
-    height: 5rem;
-    width: 5rem;
- }
-
- /*Styling Links*/
- .nav-links{
-    display: flex;
-    list-style: none;
-    width: 88vw;
-    padding: 0 0.7vw;
-    justify-content: space-evenly;
-    align-items: center;
-    text-transform: uppercase;
- }
- .nav-links li a{
-    text-decoration: none;
-    margin: 0 0.7vw;
- }
- .nav-links li a:hover {
-    color: #61DAFB;
- }
- .nav-links li {
-    position: relative;
- }
- .nav-links li a:hover::before{
-    width: 80%;
- }
-
- /*Styling Buttons*/
- .login-button{
-    background-color: transparent;
-    border: 1.5px solid #f2f5f7;
-    color: #ffeba7;
-    border-radius: 2em;
-    padding: 0.6rem 0.8rem;
-    margin-left: 2vw;
-    font-size: 1rem;
-    cursor: pointer;
-.login-button_1{
-    background-color: #1f2029;
-    border: 1.5px solid #f2f5f7;
-    color: #ffeba7;
-    border-radius: 2em;
-    padding: 0.6rem 0.8rem;
-    margin-left: 2vw;
-    font-size: 1rem;
-    cursor: pointer;
- }
- .login-button:hover {
-    color: #131418;
-    background-color: #f2f5f7;
-    border:1.5px solid #f2f5f7;
-    transition: all ease-in-out 350ms;
- }
- .join-button{
-    color: #131418;
-    background-color: #61DAFB;
-    border: 1.5px solid #61DAFB;
-    border-radius: 2em;
-    padding: 0.6rem 0.8rem;
-    font-size: 1rem;
-    cursor: pointer;
- }
- .join-button:hover {
-    color: #f2f5f7;
-    background-color: transparent;
-    border:1.5px solid #f2f5f7;
-    transition: all ease-in-out 350ms;
- }
-
- /*Styling Hamburger Icon*/
- .hamburger div{
-    width: 30px;
-    height:3px;
-    background: #f2f5f7;
-    margin: 5px;
-    transition: all 0.3s ease;
- }
- .hamburger{
-    display: none;
- }
-
- /*Stying for small screens*/
- @media screen and (max-width: 800px){
-    nav{
-        position: fixed;
-        z-index: 3;
-    }
-    .hamburger{
-        display:block;
-        position: absolute;
-        cursor: pointer;
-        right: 5%;
-        top: 50%;
-        transform: translate(-5%, -50%);
-        z-index: 2;
-        transition: all 0.7s ease;
-    }
-    .nav-links{
-        position: fixed;
-        background: #714a65;
-        height: 100vh;
-        width: 100%;
-        flex-direction: column;
-        clip-path: circle(50px at 90% -20%);
-        -webkit-clip-path: circle(50px at 90% -10%);
-        transition: all 1s ease-out;
-        pointer-events: none;
-    }
-    .nav-links.open{
-        clip-path: circle(1000px at 90% -10%);
-        -webkit-clip-path: circle(1000px at 90% -10%);
-        pointer-events: all;
-    }
-    .nav-links li{
-        opacity: 0;
-    }
-    .nav-links li:nth-child(1){
-        transition: all 0.5s ease 0.2s;
-    }
-    .nav-links li:nth-child(2){
-        transition: all 0.5s ease 0.4s;
-    }
-    .nav-links li:nth-child(3){
-        transition: all 0.5s ease 0.6s;
-    }
-    .nav-links li:nth-child(4){
-        transition: all 0.5s ease 0.7s;
-    }
-    .nav-links li:nth-child(5){
-        transition: all 0.5s ease 0.8s;
-    }
-    .nav-links li:nth-child(6){
-        transition: all 0.5s ease 0.9s;
-        margin: 0;
-    }
-    .nav-links li:nth-child(7){
-        transition: all 0.5s ease 1s;
-        margin: 0;
-    }
-    li.fade{
-        opacity: 1;
-    }
- }
- /*Animating Hamburger Icon on Click*/
- .toggle .line1{
-    transform: rotate(-45deg) translate(-5px,6px);
- }
- .toggle .line2{
-    transition: all 0.7s ease;
-    width:0;
- }
- .toggle .line3{
-    transform: rotate(45deg) translate(-5px,-6px);
- }
- .m-overlay {
+<title>Каталог</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<style>
+      .m-overlay {
     position:fixed;
     left:0;
     top:0;
@@ -443,70 +259,174 @@
     color:#a94442;
     background-color:#f2dede
    }
-       .product-catalog {
+  body{
+    overflow-x: hidden;
+ }
+ nav{
+    height: 4.5rem;
+    width: 100vw;
+    background-color:  #1f2029;
+    box-shadow: 0 3px 20px rgba(0, 0, 0, 0.2);
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding: 20px;
-}
+    position: fixed;
+    z-index: 10;
+ }
 
-.product-card {
-    position: relative;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(232, 46, 46, 0.1);
-    margin: 20px;
-    padding: 20px;
-    max-width: 300px;
+ /*Styling logo*/
+ .logo{
+    padding:1vh 1vw;
     text-align: center;
-    overflow: hidden;
-}
+ }
+ .logo img {
+    height: 5rem;
+    width: 5rem;
+ }
 
-.product-card img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 8px;
-}
+ /*Styling Links*/
+ .nav-links{
+    display: flex;
+    list-style: none;
+    width: 88vw;
+    padding: 0 0.7vw;
+    justify-content: space-evenly;
+    align-items: center;
+    text-transform: uppercase;
+ }
+ .nav-links li a{
+    text-decoration: none;
+    margin: 0 0.7vw;
+ }
+ .nav-links li a:hover {
+    color: #61DAFB;
+ }
+ .nav-links li {
+    position: relative;
+ }
+ .nav-links li a:hover::before{
+    width: 80%;
+ }
 
-.product-name {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    background-color: rgba(116, 5, 5, 0.7);
-    color: rgb(78, 49, 185), 0, 0);
-    padding: 10px;
-    font-size: 1.2rem;
+ /*Styling Buttons*/
+ .login-button{
+    background-color: transparent;
+    border: 1.5px solid #f2f5f7;
+    border-radius: 2em;
+    padding: 0.6rem 0.8rem;
+    margin-left: 2vw;
+    font-size: 1rem;
     cursor: pointer;
-    transition: background-color 0.3s ease;
-}
 
-.product-card:hover .product-name {
-    background-color: rgba(0, 0, 0, 0.5);
-}
-
-.product-card p {
-    color: #777;
-    margin-top: 60px; /* Adjust to leave space for the product name rectangle */
-}
-
-.product-card button {
+ }
+ .login-button:hover {
+    color: #131418;
+    background-color: #f2f5f7;
+    border:1.5px solid #f2f5f7;
+    transition: all ease-in-out 350ms;
+ }
+ .join-button{
+    color: #131418;
     background-color: #61DAFB;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
+    border: 1.5px solid #61DAFB;
+    border-radius: 2em;
+    padding: 0.6rem 0.8rem;
+    font-size: 1rem;
     cursor: pointer;
-    transition: background-color 0.3s ease;
-}
+ }
+ .join-button:hover {
+    color: #f2f5f7;
+    background-color: transparent;
+    border:1.5px solid #f2f5f7;
+    transition: all ease-in-out 350ms;
+ }
 
-.product-card button:hover {
-    background-color: #2c7bb6;
-}
+ /*Styling Hamburger Icon*/
+ .hamburger div{
+    width: 30px;
+    height:3px;
+    background: #f2f5f7;
+    margin: 5px;
+    transition: all 0.3s ease;
+ }
+ .hamburger{
+    display: none;
+ }
 
-   </style>
-    <!--<link rel="stylesheet" href="static/homecatalog.css">-->
+ /*Stying for small screens*/
+ @media screen and (max-width: 800px){
+    nav{
+        position: fixed;
+        z-index: 3;
+    }
+    .hamburger{
+        display:block;
+        position: absolute;
+        cursor: pointer;
+        right: 5%;
+        top: 50%;
+        transform: translate(-5%, -50%);
+        z-index: 2;
+        transition: all 0.7s ease;
+    }
+    .nav-links{
+        position: fixed;
+        color: #ffeba7;
+        background: #714a65;
+        height: 100vh;
+        width: 100%;
+        flex-direction: column;
+        clip-path: circle(50px at 90% -20%);
+        -webkit-clip-path: circle(50px at 90% -10%);
+        transition: all 1s ease-out;
+        pointer-events: none;
+    }
+    .nav-links.open{
+        clip-path: circle(1000px at 90% -10%);
+        -webkit-clip-path: circle(1000px at 90% -10%);
+        pointer-events: all;
+    }
+    .nav-links li{
+        opacity: 0;
+    }
+    .nav-links li:nth-child(1){
+        transition: all 0.5s ease 0.2s;
+    }
+    .nav-links li:nth-child(2){
+        transition: all 0.5s ease 0.4s;
+    }
+    .nav-links li:nth-child(3){
+        transition: all 0.5s ease 0.6s;
+    }
+    .nav-links li:nth-child(4){
+        transition: all 0.5s ease 0.7s;
+    }
+    .nav-links li:nth-child(5){
+        transition: all 0.5s ease 0.8s;
+    }
+    .nav-links li:nth-child(6){
+        transition: all 0.5s ease 0.9s;
+        margin: 0;
+    }
+    .nav-links li:nth-child(7){
+        transition: all 0.5s ease 1s;
+        margin: 0;
+    }
+    li.fade{
+        opacity: 1;
+    }
+ }
+ /*Animating Hamburger Icon on Click*/
+ .toggle .line1{
+    transform: rotate(-45deg) translate(-5px,6px);
+ }
+ .toggle .line2{
+    transition: all 0.7s ease;
+    width:0;
+ }
+ .toggle .line3{
+    transform: rotate(45deg) translate(-5px,-6px);
+ }
 
+</style>
 </head>
 <body>
   <nav>
@@ -525,43 +445,21 @@
         <li><a href="{% url 'users:register' %}">Вход/Регистрация</a></li>
     </ul>
   </nav>
-   <script>
-        const hamburger = document.querySelector(".hamburger");
-        const navLinks = document.querySelector(".nav-links");
-        const links = document.querySelectorAll(".nav-links li");
-
-        hamburger.addEventListener('click', ()=>{
-           //Animate Links
-            navLinks.classList.toggle("open");
-            links.forEach(link => {
-                link.classList.toggle("fade");
-            });
-
-            //Hamburger Animation
-            hamburger.classList.toggle("toggle");
-        });
-   </script>
-
 <div class="w3-main w3-content w3-padding" style="max-width:1200px;margin-top:100px">
 
-   <div class="cart-summary">
-       <div class="subcategory-list">
-            <h1>{{ category.category }}</h1>
 
-            <ul>
-                {% for subcategory in subcategories %}
-                    <li>
-                        <a href="{% url 'product_list' subcategory.id|stringformat:"s" %}">{{ subcategory.name_subcategory }}</a>
-                    </li>
-                {% endfor %}
-            </ul>
-       </div>
-   </div>
+  <div class="w3-row-padding w3-padding-16 w3-center" id="food">
+    {% for product in products %}
+    <div class="w3-quarter">
+        <a style="width:100%" href="{% url 'product_detail' product.id %}">{{ product.name }} </a>
+        <p><strong>Описание:</strong> {{ product.description }}</p>
+        <p><strong>Цена:</strong> {{ product.price }} BYN</p>
+        <p><strong>Рейтинг:</strong> {{ product.rating }}</p>
+    </div>
+    {% endfor %}
 
+  </div>
 
-
-
-  <!-- Pagination -->
   <div class="w3-center w3-padding-32">
     <div class="w3-bar">
       <a href="#" class="w3-bar-item w3-button w3-hover-black">&laquo;</a>
@@ -579,15 +477,62 @@
 </div>
 
 <script>
-    // Script to open and close sidebar
-    function w3_open() {
-      document.getElementById("mySidebar").style.display = "block";
-    }
+// Script to open and close sidebar
+function w3_open() {
+  document.getElementById("mySidebar").style.display = "block";
+}
 
-    function w3_close() {
-      document.getElementById("mySidebar").style.display = "none";
+function w3_close() {
+  document.getElementById("mySidebar").style.display = "none";
+}
+// Данные товара, который вы хотите добавить в корзину
+const товар = {
+    id: 1,
+    имя: "Примерный товар",
+    цена: 10.99
+};
+
+// Отправка POST-запроса на сервер для добавления товара в корзину
+fetch('/api/добавить_в_корзину', {
+    method: 'POST',
+    headers: {
+        'Content-Type': 'application/json'
+    },
+    body: JSON.stringify(товар)
+})
+.then(response => {
+    if (!response.ok) {
+        throw new Error('Ошибка при добавлении товара в корзину');
     }
+    // Обработка успешного ответа
+    return response.json();
+})
+.then(data => {
+    // Обработка полученных данных
+    console.log('Товар успешно добавлен в корзину:', data);
+})
+.catch(error => {
+    // Обработка ошибок
+    console.error('Произошла ошибка:', error);
+});
+
 </script>
+<script>
+    const hamburger = document.querySelector(".hamburger");
+const navLinks = document.querySelector(".nav-links");
+const links = document.querySelectorAll(".nav-links li");
 
+hamburger.addEventListener('click', ()=>{
+   //Animate Links
+    navLinks.classList.toggle("open");
+    links.forEach(link => {
+        link.classList.toggle("fade");
+    });
+
+    //Hamburger Animation
+    hamburger.classList.toggle("toggle");
+});
+
+</script>
 </body>
 </html>
