--- a/soapstore/product/templates/product/category_detail.html
+++ b/soapstore/product/templates/product/category_detail.html
@@ -520,6 +520,7 @@
     </div>
     <ul class="nav-links">
         <li><a href="{% url 'users:home' %}">Главная</a></li>
+        <li><a href="{% url 'category_list' %}">Каталог</a></li>
         <li><a href="{% url 'users:cart' %}">Корзина</a></li>
         <li><a href="https://www.instagram.com/">Инстаграм</a></li>
         <li><a href="{% url 'users:register' %}">Вход/Регистрация</a></li>
