--- a/soapstore/product/templates/product/product_detail.html
+++ b/soapstore/product/templates/product/product_detail.html
@@ -444,7 +444,7 @@
         <li><a href="{% url 'users:cart' %}">Корзина</a></li>
         <li><a href="https://www.instagram.com/">Инстаграм</a></li>
         <li><a href="{% url 'users:register' %}">Вход/Регистрация</a></li>
-   </nav>
+  </nav>
 <div class="w3-main w3-content w3-padding" style="max-width:1200px;margin-top:100px">
 
 
@@ -461,6 +461,7 @@
 
             <form action="{% url 'users:add_to_cart' product.pk %}" method="post">
               {% csrf_token %}
+              <input type="hidden" name="product_id" value="{{ product.pk }}">
               <button type="submit">Добавить в корзину</button>
             </form>
         </div>
