--- a/soapstore/product/templates/product/create_review.html
+++ b/soapstore/product/templates/product/create_review.html
@@ -1,12 +1,196 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Каталог</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<style>
-      .m-overlay {
+    <title>Корзина</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <style>
+
+     /* *{
+    margin: 0;
+    padding: 0;
+    color: #ffeba7;
+    font-family: sans-serif;
+    letter-spacing: 1px;
+    font-weight: 300;
+ } */
+ body{
+    overflow-x: hidden;
+ }
+ nav{
+    height: 4.5rem;
+    width: 100vw;
+    color: #ffeba7;
+    background-color:  #1f2029;
+    box-shadow: 0 3px 20px rgba(0, 0, 0, 0.2);
+    display: flex;
+    position: fixed;
+    z-index: 10;
+ }
+
+ /*Styling logo*/
+ .logo{
+    padding:1vh 1vw;
+    text-align: center;
+ }
+ .logo img {
+    height: 5rem;
+    width: 5rem;
+ }
+
+ /*Styling Links*/
+ .nav-links{
+    display: flex;
+    list-style: none;
+    width: 88vw;
+    padding: 0 0.7vw;
+    justify-content: space-evenly;
+    align-items: center;
+    text-transform: uppercase;
+ }
+ .nav-links li a{
+    text-decoration: none;
+    margin: 0 0.7vw;
+ }
+ .nav-links li a:hover {
+    color: #61DAFB;
+ }
+ .nav-links li {
+    position: relative;
+ }
+ .nav-links li a:hover::before{
+    width: 80%;
+ }
+
+ /*Styling Buttons*/
+ .login-button{
+    background-color: transparent;
+    border: 1.5px solid #f2f5f7;
+    color: #ffeba7;
+    border-radius: 2em;
+    padding: 0.6rem 0.8rem;
+    margin-left: 2vw;
+    font-size: 1rem;
+    cursor: pointer;
+.login-button_1{
+    background-color: #1f2029;
+    border: 1.5px solid #f2f5f7;
+    color: #ffeba7;
+    border-radius: 2em;
+    padding: 0.6rem 0.8rem;
+    margin-left: 2vw;
+    font-size: 1rem;
+    cursor: pointer;
+ }
+ .login-button:hover {
+    color: #131418;
+    background-color: #f2f5f7;
+    border:1.5px solid #f2f5f7;
+    transition: all ease-in-out 350ms;
+ }
+ .join-button{
+    color: #131418;
+    background-color: #61DAFB;
+    border: 1.5px solid #61DAFB;
+    border-radius: 2em;
+    padding: 0.6rem 0.8rem;
+    font-size: 1rem;
+    cursor: pointer;
+ }
+ .join-button:hover {
+    color: #f2f5f7;
+    background-color: transparent;
+    border:1.5px solid #f2f5f7;
+    transition: all ease-in-out 350ms;
+ }
+
+ /*Styling Hamburger Icon*/
+ .hamburger div{
+    width: 30px;
+    height:3px;
+    background: #f2f5f7;
+    margin: 5px;
+    transition: all 0.3s ease;
+ }
+ .hamburger{
+    display: none;
+ }
+
+ /*Stying for small screens*/
+ @media screen and (max-width: 800px){
+    nav{
+        position: fixed;
+        z-index: 3;
+    }
+    .hamburger{
+        display:block;
+        position: absolute;
+        cursor: pointer;
+        right: 5%;
+        top: 50%;
+        transform: translate(-5%, -50%);
+        z-index: 2;
+        transition: all 0.7s ease;
+    }
+    .nav-links{
+        position: fixed;
+        background: #714a65;
+        height: 100vh;
+        width: 100%;
+        flex-direction: column;
+        clip-path: circle(50px at 90% -20%);
+        -webkit-clip-path: circle(50px at 90% -10%);
+        transition: all 1s ease-out;
+        pointer-events: none;
+    }
+    .nav-links.open{
+        clip-path: circle(1000px at 90% -10%);
+        -webkit-clip-path: circle(1000px at 90% -10%);
+        pointer-events: all;
+    }
+    .nav-links li{
+        opacity: 0;
+    }
+    .nav-links li:nth-child(1){
+        transition: all 0.5s ease 0.2s;
+    }
+    .nav-links li:nth-child(2){
+        transition: all 0.5s ease 0.4s;
+    }
+    .nav-links li:nth-child(3){
+        transition: all 0.5s ease 0.6s;
+    }
+    .nav-links li:nth-child(4){
+        transition: all 0.5s ease 0.7s;
+    }
+    .nav-links li:nth-child(5){
+        transition: all 0.5s ease 0.8s;
+    }
+    .nav-links li:nth-child(6){
+        transition: all 0.5s ease 0.9s;
+        margin: 0;
+    }
+    .nav-links li:nth-child(7){
+        transition: all 0.5s ease 1s;
+        margin: 0;
+    }
+    li.fade{
+        opacity: 1;
+    }
+ }
+ /*Animating Hamburger Icon on Click*/
+ .toggle .line1{
+    transform: rotate(-45deg) translate(-5px,6px);
+ }
+ .toggle .line2{
+    transition: all 0.7s ease;
+    width:0;
+ }
+ .toggle .line3{
+    transform: rotate(45deg) translate(-5px,-6px);
+ }
+ .m-overlay {
     position:fixed;
     left:0;
     top:0;
@@ -259,175 +443,44 @@
     color:#a94442;
     background-color:#f2dede
    }
-  body{
-    overflow-x: hidden;
- }
- nav{
-    height: 4.5rem;
-    width: 100vw;
-    background-color:  #1f2029;
-    box-shadow: 0 3px 20px rgba(0, 0, 0, 0.2);
+       .product-catalog {
     display: flex;
-    position: fixed;
-    z-index: 10;
- }
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 20px;
+}
+.cart-summary {
+    margin-top: 20px;
+    padding: 10px;
+    background-color: #714a65;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
 
- /*Styling logo*/
- .logo{
-    padding:1vh 1vw;
-    text-align: center;
- }
- .logo img {
-    height: 5rem;
-    width: 5rem;
- }
+.category {
+    margin-bottom:17px;
+}
 
- /*Styling Links*/
- .nav-links{
-    display: flex;
-    list-style: none;
-    width: 88vw;
-    padding: 0 0.7vw;
-    justify-content: space-evenly;
-    align-items: center;
-    text-transform: uppercase;
- }
- .nav-links li a{
+.category a {
+    display: block;
+    font-weight: bold;
     text-decoration: none;
-    margin: 0 0.7vw;
     color: #ffeba7;
- }
- .nav-links li a:hover {
-    color: #61DAFB;
- }
- .nav-links li {
-    position: relative;
- }
- .nav-links li a:hover::before{
-    width: 80%;
- }
+    margin-bottom: 5px;
+}
 
- /*Styling Buttons*/
- .login-button{
-    background-color: transparent;
-    border: 1.5px solid #f2f5f7;
-    border-radius: 2em;
-    padding: 0.6rem 0.8rem;
-    margin-left: 2vw;
-    font-size: 1rem;
-    cursor: pointer;
+.subcategory-list a {
+    margin-left: 15px;
+    color: #ffeba7;
+    text-decoration: none;
+}
 
- }
- .login-button:hover {
-    color: #131418;
-    background-color: #f2f5f7;
-    border:1.5px solid #f2f5f7;
-    transition: all ease-in-out 350ms;
- }
- .join-button{
-    color: #131418;
-    background-color: #61DAFB;
-    border: 1.5px solid #61DAFB;
-    border-radius: 2em;
-    padding: 0.6rem 0.8rem;
-    font-size: 1rem;
-    cursor: pointer;
- }
- .join-button:hover {
-    color: #f2f5f7;
-    background-color: transparent;
-    border:1.5px solid #f2f5f7;
-    transition: all ease-in-out 350ms;
- }
+.subcategory-list a:hover {
+    color: #000;
+}
+   </style>
+    <!--<link rel="stylesheet" href="static/homecatalog.css">-->
 
- /*Styling Hamburger Icon*/
- .hamburger div{
-    width: 30px;
-    height:3px;
-    background: #f2f5f7;
-    margin: 5px;
-    transition: all 0.3s ease;
- }
- .hamburger{
-    display: none;
- }
-
- /*Stying for small screens*/
- @media screen and (max-width: 800px){
-    nav{
-        position: fixed;
-        z-index: 3;
-    }
-    .hamburger{
-        display:block;
-        position: absolute;
-        cursor: pointer;
-        right: 5%;
-        top: 50%;
-        transform: translate(-5%, -50%);
-        z-index: 2;
-        transition: all 0.7s ease;
-    }
-    .nav-links{
-        position: fixed;
-        color: #ffeba7;
-        background: #714a65;
-        height: 100vh;
-        width: 100%;
-        flex-direction: column;
-        clip-path: circle(50px at 90% -20%);
-        -webkit-clip-path: circle(50px at 90% -10%);
-        transition: all 1s ease-out;
-        pointer-events: none;
-    }
-    .nav-links.open{
-        clip-path: circle(1000px at 90% -10%);
-        -webkit-clip-path: circle(1000px at 90% -10%);
-        pointer-events: all;
-    }
-    .nav-links li{
-        opacity: 0;
-    }
-    .nav-links li:nth-child(1){
-        transition: all 0.5s ease 0.2s;
-    }
-    .nav-links li:nth-child(2){
-        transition: all 0.5s ease 0.4s;
-    }
-    .nav-links li:nth-child(3){
-        transition: all 0.5s ease 0.6s;
-    }
-    .nav-links li:nth-child(4){
-        transition: all 0.5s ease 0.7s;
-    }
-    .nav-links li:nth-child(5){
-        transition: all 0.5s ease 0.8s;
-    }
-    .nav-links li:nth-child(6){
-        transition: all 0.5s ease 0.9s;
-        margin: 0;
-    }
-    .nav-links li:nth-child(7){
-        transition: all 0.5s ease 1s;
-        margin: 0;
-    }
-    li.fade{
-        opacity: 1;
-    }
- }
- /*Animating Hamburger Icon on Click*/
- .toggle .line1{
-    transform: rotate(-45deg) translate(-5px,6px);
- }
- .toggle .line2{
-    transition: all 0.7s ease;
-    width:0;
- }
- .toggle .line3{
-    transform: rotate(45deg) translate(-5px,-6px);
- }
-
-</style>
 </head>
 <body>
   <nav>
@@ -442,43 +495,12 @@
     <ul class="nav-links">
         <li><a href="{% url 'users:home' %}">Главная</a></li>
         <li><a href="{% url 'category_list' %}">Каталог</a></li>
-        <li><a href="{% url 'users:cart' %}">Корзина</a></li>
         <li><a href="https://www.instagram.com/">Инстаграм</a></li>
         <li><a href="{% url 'users:register' %}">Вход/Регистрация</a></li>
     </ul>
   </nav>
-<div class="w3-main w3-content w3-padding" style="max-width:1200px;margin-top:100px">
-
-
-  <div class="w3-row-padding w3-padding-16 w3-center" id="food">
-    {% for product in products %}
-    <div class="w3-quarter">
-        <a style="width:100%" href="{% url 'product_detail' product.id %}">{{ product.name }} </a>
-        <p><strong>Описание:</strong> {{ product.description }}</p>
-        <p><strong>Цена:</strong> {{ product.price }} BYN</p>
-<!--        <p><strong>Рейтинг:</strong> {{ product.rating }}</p>-->
-    </div>
-    {% endfor %}
-
-  </div>
-
-  <div class="w3-center w3-padding-32">
-    <div class="w3-bar">
-      <a href="#" class="w3-bar-item w3-button w3-hover-black">&laquo;</a>
-      <a href="#" class="w3-bar-item w3-black w3-button">1</a>
-      <a href="#" class="w3-bar-item w3-button w3-hover-black">2</a>
-      <a href="#" class="w3-bar-item w3-button w3-hover-black">3</a>
-      <a href="#" class="w3-bar-item w3-button w3-hover-black">4</a>
-      <a href="#" class="w3-bar-item w3-button w3-hover-black">&raquo;</a>
-    </div>
-  </div>
-
-  <hr id="about">
-
-
-</div>
-  <script>
-            const hamburger = document.querySelector(".hamburger");
+   <script>
+        const hamburger = document.querySelector(".hamburger");
         const navLinks = document.querySelector(".nav-links");
         const links = document.querySelectorAll(".nav-links li");
 
@@ -492,7 +514,47 @@
             //Hamburger Animation
             hamburger.classList.toggle("toggle");
         });
+   </script>
+    <div class="w3-main w3-content w3-padding" style="max-width:1200px;margin-top:100px">
 
-  </script>
+
+            <div class="cart-summary">
+                <h2>Корзина</h2>
+
+                {% block content %}
+                  <div class="review-form">
+                    <h2>Оставьте отзыв о {{ product.name }}</h2>
+                    <form method="post" action="">
+                      {% csrf_token %}
+                      {{ form.as_p }}  <!-- Это отобразит наши поля формы -->
+                      <button type="submit">Отправить отзыв</button>
+                    </form>
+                  </div>
+                {% endblock %}
+            </div>
+
+    </div>
+
+  <!-- Second Photo Grid-->
+
+
+  <!-- Pagination -->
+
+  <hr id="about">
+
+
+</div>
+
+<script>
+    // Script to open and close sidebar
+    function w3_open() {
+      document.getElementById("mySidebar").style.display = "block";
+    }
+
+    function w3_close() {
+      document.getElementById("mySidebar").style.display = "none";
+    }
+</script>
+
 </body>
 </html>
